# duckdb-embeddings-extension

./: CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: embed_text_extension.cpp  embeddings_extension.cpp  function_data.hpp  rust.h  text_embedder.hpp
src/include/: embed_text_extension.hpp  embeddings_extension.hpp  rust.h
test/sql/: embed_text.test  embeddings.test
text_embedding_rust/: Cargo.toml  build.rs
text_embedding_rust/src/: lib.rs
text_embedding_rust/src/models/: mod.rs  text_embedder.rs
